--- a/index.html
+++ b/index.html
@@ -7,14 +7,59 @@
 </head>
 
 <body>
-
     <div class="header">
-        
+        <img src="" alt="Header Logo">
+        <a>header link one</a>
+        <a>header link two</a>
+        <a>header link three</a>
     </div>
-
+    <div class="body body1">
+        <div class="left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="right">
+            <img src="" alt="this is a placeholder for an image">
+        </div>
+    </div>
+    <div class="body body2">
+        <h2>Some random information.</h2>
+        <div class="l-to-r-contents">
+            <div class="box">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <img src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="body body3">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <strong>-Thor, God of Thunder</strong>
+    </div>
+    <div class="body body4">
+        <div class="left">
+            <b>Call to action! It's time!</b>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="right">
+            <button>Sign up</button>
+        </div>
+    </div>
     <div class="footer">
-        
+        <div>Copyright &copy The Odin Project</div>
     </div>
-
 </body>
 </html>
