Added styles in accordance with provided image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="stylest.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -50,12 +50,14 @@
         <strong>-Thor, God of Thunder</strong>
     </div>
     <div class="body body4">
-        <div class="left">
-            <b>Call to action! It's time!</b>
-            <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
-        <div class="right">
-            <button>Sign up</button>
+        <div class="frame">
+            <div class="left">
+                <b>Call to action! It's time!</b>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+         <div class="right">
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
