--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
 <body>
     <div class="header">
-        <img src="" alt="Header Logo">
-        <a>header link one</a>
-        <a>header link two</a>
-        <a>header link three</a>
+        <div class="left">
+            <img src="" alt="Header Logo" width="100" height="100"> <!-- sizes are here as placeholders-->
+        </div>
+        <div class="right">
+            <a>header link one</a>
+            <a>header link two</a>
+            <a>header link three</a>
+        </div>
     </div>
     <div class="body body1">
         <div class="left">
@@ -25,29 +29,29 @@
     </div>
     <div class="body body2">
         <h2>Some random information.</h2>
-        <div class="l-to-r-contents">
+        <div class="l-to-r-contents"> <!-- img sizes are within as placeholders; I've left alts blank so size isn't overriden-->
             <div class="box">
-                <img src="" alt="">
+                <img src="" alt="" width="100" height="100">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
-                <img src="" alt="">
+                <img src="" alt="" width="100" height="100">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
-                <img src="" alt="">
+                <img src="" alt="" width="100" height="100">
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
-                <img src="" alt="">
+                <img src="" alt="" width="100" height="100">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
     <div class="body body3">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <strong>-Thor, God of Thunder</strong>
+        <p class="attribution"><strong>-Thor, God of Thunder</strong></p>
     </div>
     <div class="body body4">
         <div class="frame">
@@ -55,7 +59,7 @@
                 <b>Call to action! It's time!</b>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-         <div class="right">
+            <div class="right">
                 <button>Sign up</button>
             </div>
         </div>
