Gave buttons a definite width and stopped body4's frame from growing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p class="attribution"><strong>-Thor, God of Thunder</strong></p>
     </div>
     <div class="body body4">
-        <div class="frame">
+        <div class="frame" width="1000">
             <div class="left">
                 <b>Call to action! It's time!</b>
                 <p>Sign up for our product by clicking that button right over there!</p>
