--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="l-to-r-contents"> <!-- img sizes are within as placeholders; I've left alts blank so size isn't overriden-->
             <div class="box">
                 <img src="" alt="" width="100" height="100">
-                <p>this is some subtext under an illustration or image</p>
+                <p width="100">this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
                 <img src="" alt="" width="100" height="100">
-                <p>this is some subtext under an illustration or image</p>
+                <p width="100">this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
                 <img src="" alt="" width="100" height="100">
-                <p>this is some subtext under an illustration or image</p>
+                <p width="100">this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
                 <img src="" alt="" width="100" height="100">
-                <p>this is some subtext under an illustration or image</p>
+                <p width="100">this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
